--- a/index.html
+++ b/index.html
@@ -1,60 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/css/style.css">
-  </head>
-  <body>
-    <div id="search">
-      <img src="static/icons/DDG-icon_16x16.png" alt="DuckDuckGo icon">
-      <input id="search-input" type="text" placeholder="Search...">
-      <button id="search-button">
-        <i class="fa fa-search"></i>
-      </button>
-    </div>
+<head>
+  <meta charset="utf-8">
+  <title>Home</title>
 
-    <ul>
-      <li><a href="https://www.youtube.com/">YouTube</a></li>
-      <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
-      <li><a href="https://www.4chan.org/">4chan</a>
-        <ul>
-          <li><a href="https://boards.4chan.org/g/">/g/ - Technology</a></li>
-          <li><a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a></li>
-        </ul>
-      </li>
-      <li><a href="https://www.reddit.com/">Reddit</a>
-        <ul>
-          <li><a href="https://www.reddit.com/r/leagueoflegends/">/r/leagueoflegends</a></li>
-          <li><a href="https://www.reddit.com/r/summonerschool/">/r/summonerschool</a></li>
-          <li><a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a></li>
-        </ul>
-      </li>
-      <li><a href="https://www.op.gg/">OP.GG</a>
-        <ul>
-          <li><a href="https://br.op.gg/summoner/userName=katsengoku">KATsengoku</a></li>
-          <li><a href="https://www.op.gg/summoner/userName=hideonbush">Hide on bush</a></li>
-          <li><a href="https://www.op.gg/summoner/userName=삼성갤럭시crown">삼성갤럭시 Crown</a></li>
-        </ul>
-      </li>
-      <li><a href="https://mail.protonmail.com/inbox">Protonmail</a></li>
-      <li><a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo Wiki</a>
-        <ul>
-          <li><a href="https://wiki.installgentoo.com/index.php/List_of_recommended_Windows_software">
-            List of recommended Windows software
-          </a></li>
-        </ul>
-      </li>
-      <li><a href="https://thepiratebay.org/">The Pirate Bay</a></li>
-      <li><a href="https://github.com/">GitHub</a></li>
-    </ul>
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="static/css/style.css">
+</head>
+<body>
+  <div id="search">
+    <img src="static/icons/DDG-icon_16x16.png" alt="DuckDuckGo icon">
+    <input id="search-input" type="text" placeholder="Search...">
+    <button id="search-button">
+      <i class="fa fa-search"></i>
+    </button>
+  </div>
 
-    <p>Live on Twitch:</p>
-    <ul id="twitch">
-    </ul>
+  <table id="links">
+    <tr>
+      <td class="cell"><a href="https://www.youtube.com/">YouTube</a></td>
+      <td class="cell"><a href="https://news.ycombinator.com/">Hacker News</a></td>
+      <td id="4chan-cell" class="cell"><a href="https://www.4chan.org">4chan</span></td>
+    </tr>
+    <tr>
+      <td class="cell"><a href="https://www.reddit.com/">Reddit</a></td>
+      <td class="cell"><a href="https://www.op.gg/">OP.GG</a></td>
+      <td class="cell"><a href="https://mail.protonmail.com/inbox">Protonmail</a></td>
+    </tr>
+    <tr>
+      <td class="cell"><a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo Wiki</a></td>
+      <td class="cell"><a href="https://thepiratebay.org/">The Pirate Bay</a></td>
+      <td class="cell"><a href="https://github.com/">GitHub</a></td>
+    </tr>
+  </table>
 
-    <script src="static/js/script.js" charset="utf-8"></script>
-  </body>
+  <ul>
+    <li><a href="https://www.4chan.org/">4chan</a>
+      <ul>
+        <li><a href="https://boards.4chan.org/g/">/g/ - Technology</a></li>
+        <li><a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a></li>
+      </ul>
+    </li>
+    <li><a href="https://www.reddit.com/">Reddit</a>
+      <ul>
+        <li><a href="https://www.reddit.com/r/leagueoflegends/">/r/leagueoflegends</a></li>
+        <li><a href="https://www.reddit.com/r/summonerschool/">/r/summonerschool</a></li>
+        <li><a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a></li>
+      </ul>
+    </li>
+    <li><a href="https://www.op.gg/">OP.GG</a>
+      <ul>
+        <li><a href="https://br.op.gg/summoner/userName=katsengoku">KATsengoku</a></li>
+        <li><a href="https://www.op.gg/summoner/userName=hideonbush">Hide on bush</a></li>
+        <li><a href="https://www.op.gg/summoner/userName=삼성갤럭시crown">삼성갤럭시 Crown</a></li>
+      </ul>
+    </li>
+    <li><a href="https://mail.protonmail.com/inbox">Protonmail</a></li>
+    <li><a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo Wiki</a>
+      <ul>
+        <li><a href="https://wiki.installgentoo.com/index.php/List_of_recommended_Windows_software">
+          List of recommended Windows software
+        </a></li>
+      </ul>
+    </li>
+    <li><a href="https://thepiratebay.org/">The Pirate Bay</a></li>
+    <li><a href="https://github.com/">GitHub</a></li>
+  </ul>
+
+  <p>Live on Twitch:</p>
+  <ul id="twitch">
+  </ul>
+
+  <script src="static/js/script.js" charset="utf-8"></script>
+</body>
 </html>
