--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="search">
@@ -19,23 +19,25 @@
 
   <table id="links">
     <tr>
-      <td class="cell"><a href="https://www.youtube.com/">YouTube</a></td>
-      <td class="cell"><a href="https://news.ycombinator.com/">Hacker News</a></td>
-      <td id="4chan-cell" class="cell"><a href="https://www.4chan.org">4chan</span></td>
+      <td>Reddit</td>
+      <td>b</td>
+      <td>c</td>
     </tr>
     <tr>
-      <td class="cell"><a href="https://www.reddit.com/">Reddit</a></td>
-      <td class="cell"><a href="https://www.op.gg/">OP.GG</a></td>
-      <td class="cell"><a href="https://mail.protonmail.com/inbox">Protonmail</a></td>
+      <td>d</td>
+      <td>e</td>
+      <td>f</td>
     </tr>
     <tr>
-      <td class="cell"><a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo Wiki</a></td>
-      <td class="cell"><a href="https://thepiratebay.org/">The Pirate Bay</a></td>
-      <td class="cell"><a href="https://github.com/">GitHub</a></td>
+      <td>g</td>
+      <td>h</td>
+      <td>i</td>
     </tr>
   </table>
 
   <ul>
+    <li><a href="https://www.youtube.com/">YouTube</a></li>
+    <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
     <li><a href="https://www.4chan.org/">4chan</a>
       <ul>
         <li><a href="https://boards.4chan.org/g/">/g/ - Technology</a></li>
@@ -72,6 +74,6 @@
   <ul id="twitch">
   </ul>
 
-  <script src="static/js/script.js" charset="utf-8"></script>
+  <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
