Finish sketch of a table

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
   <table id="links">
     <tr>
-      <td>Reddit</td>
-      <td>b</td>
-      <td>c</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
     </tr>
     <tr>
-      <td>d</td>
-      <td>e</td>
-      <td>f</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
     </tr>
     <tr>
-      <td>g</td>
-      <td>h</td>
-      <td>i</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
+      <td class="link">Reddit</td>
     </tr>
   </table>
 
