Add Naist to OP.GG links

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <li><a href="https://www.op.gg/">OP.GG</a>
       <ul>
         <li><a href="https://br.op.gg/summoner/userName=katsengoku">KATsengoku</a></li>
+        <li><a href="https://www.op.gg/summoner/userName=naist">Naist</a></li>
         <li><a href="https://www.op.gg/summoner/userName=hideonbush">Hide on bush</a></li>
         <li><a href="https://www.op.gg/summoner/userName=삼성갤럭시crown">삼성갤럭시 Crown</a></li>
       </ul>
