--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </li>
     <li><a href="https://www.reddit.com/">Reddit</a>
       <ul>
+        <li><a href="https://i.imgur.com/tXoMzD7.jpg">LS Tier List</a></li>
         <li><a href="https://www.reddit.com/r/leagueoflegends/">/r/leagueoflegends</a></li>
         <li><a href="https://www.reddit.com/r/summonerschool/">/r/summonerschool</a></li>
         <li><a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a></li>
