Add first link to page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <table id="links">
     <tr>
-      <td class="link">Reddit</td>
+      <td class="link" data-url="https://www.reddit.com/">Reddit</td>
       <td class="link">Reddit</td>
       <td class="link">Reddit</td>
     </tr>
