--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   </div>
 
   <div class="links">
+    <a href="https://www.youtube.com/">YouTube</a>
+    <a href="https://news.ycombinator.com/">Hacker News</a>
+    <div class="dropdown">
+      <a href="https://www.4chan.org/">4chan</a>
+      <div class="dropdown-content">
+        <a href="https://boards.4chan.org/g/">/g/ - Technology</a>
+        <a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a>
+      </div>
+    </div>
     <div class="dropdown">
       <a href="https://www.reddit.com/">Reddit</a>
       <div class="dropdown-content">
@@ -25,48 +34,25 @@
         <a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a>
       </div>
     </div>
+    <div class="dropdown">
+      <a href="https://www.op.gg/">OP.GG</a>
+      <div class="dropdown-content">
+        <a href="https://br.op.gg/summoner/userName=katsengoku">KATsengoku</a>
+        <a href="https://www.op.gg/summoner/userName=naist">Naist</a>
+        <a href="https://www.op.gg/summoner/userName=hideonbush">Hide on bush</a>
+        <a href="https://www.op.gg/summoner/userName=삼성갤럭시crown">삼성갤럭시 Crown</a>
+      </div>
+    </div>
+    <a href="https://thepiratebay.org/">The Pirate Bay</a>
+    <a href="https://github.com/">GitHub</a>
+    <div class="dropdown">
+      <a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo</a>
+      <div class="dropdown-content">
+        <a href="https://wiki.installgentoo.com/index.php/List_of_recommended_Windows_software">Windows software</a>
+      </div>
+    </div>
+    <a href="https://mail.protonmail.com/inbox">Protonmail</a>
   </div>
-
-  <ul>
-    <li><a href="https://www.youtube.com/">YouTube</a></li>
-    <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
-    <li><a href="https://www.4chan.org/">4chan</a>
-      <ul>
-        <li><a href="https://boards.4chan.org/g/">/g/ - Technology</a></li>
-        <li><a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a></li>
-      </ul>
-    </li>
-    <li><a href="https://www.reddit.com/">Reddit</a>
-      <ul>
-        <li><a href="https://i.imgur.com/tXoMzD7.jpg">LS Tier List</a></li>
-        <li><a href="https://www.reddit.com/r/leagueoflegends/">/r/leagueoflegends</a></li>
-        <li><a href="https://www.reddit.com/r/summonerschool/">/r/summonerschool</a></li>
-        <li><a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a></li>
-      </ul>
-    </li>
-    <li><a href="https://www.op.gg/">OP.GG</a>
-      <ul>
-        <li><a href="https://br.op.gg/summoner/userName=katsengoku">KATsengoku</a></li>
-        <li><a href="https://www.op.gg/summoner/userName=naist">Naist</a></li>
-        <li><a href="https://www.op.gg/summoner/userName=hideonbush">Hide on bush</a></li>
-        <li><a href="https://www.op.gg/summoner/userName=삼성갤럭시crown">삼성갤럭시 Crown</a></li>
-      </ul>
-    </li>
-    <li><a href="https://mail.protonmail.com/inbox">Protonmail</a></li>
-    <li><a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo Wiki</a>
-      <ul>
-        <li><a href="https://wiki.installgentoo.com/index.php/List_of_recommended_Windows_software">
-          List of recommended Windows software
-        </a></li>
-      </ul>
-    </li>
-    <li><a href="https://thepiratebay.org/">The Pirate Bay</a></li>
-    <li><a href="https://github.com/">GitHub</a></li>
-  </ul>
-
-  <p>Live on Twitch:</p>
-  <ul id="twitch">
-  </ul>
 
   <script src="script.js" charset="utf-8"></script>
 </body>
