Small adjustments on links bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="https://www.4chan.org/">4chan</a>
       <div class="dropdown-content">
         <a href="https://boards.4chan.org/g/">/g/ - Technology</a>
+        <a href="https://boards.4chan.org/gif/">/gif/ - Adult GIF</a>
         <a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a>
       </div>
     </div>
@@ -53,7 +54,6 @@
     </div>
     <a href="https://mail.protonmail.com/inbox">Protonmail</a>
   </div>
-
-  <script src="script.js" charset="utf-8"></script>
+  <!-- <script src="script.js" charset="utf-8"></script> -->
 </body>
 </html>
