--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
   </div>
 
   <div class="links">
-    <a href="https://www.youtube.com/">YouTube</a>
+    <div class="dropdown">
+      <a href="https://www.youtube.com/">YouTube</a>
+      <div class="dropdown-content">
+        <a href="https://www.youtube.com/user/lastshadow9">LS</a>
+      </div>
+    </div>
     <a href="https://news.ycombinator.com/">Hacker News</a>
     <div class="dropdown">
       <a href="https://www.4chan.org/">4chan</a>
