--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="search">
     <img src="static/icons/DDG-icon_16x16.png" alt="DuckDuckGo icon">
-    <input type="text" placeholder="Search...">
-    <button><i class="fa fa-search"></i></button>
+    <input id="search-input" type="text" placeholder="Search...">
+    <button id="search-button"><i class="fa fa-search"></i></button>
   </div>
 
   <div class="links">
@@ -28,6 +28,8 @@
       <div class="dropdown-content">
         <a href="https://boards.4chan.org/g/">/g/ - Technology</a>
         <a href="https://boards.4chan.org/gif/">/gif/ - Adult GIF</a>
+        <a href="https://boards.4chan.org/mu/">/mu/ - Music</a>
+        <a href="https://boards.4chan.org/vg/">/vg/ - Video Game Generals</a>
         <a href="https://boards.4chan.org/wg/">/wg/ - Wallpapers/General</a>
       </div>
     </div>
@@ -36,6 +38,7 @@
       <div class="dropdown-content">
         <a href="https://i.imgur.com/tXoMzD7.jpg">LS Tier List</a>
         <a href="https://www.reddit.com/r/leagueoflegends/">/r/leagueoflegends</a>
+        <a href="https://www.reddit.com/r/loleventvods">/r/loleventvods</a>
         <a href="https://www.reddit.com/r/summonerschool/">/r/summonerschool</a>
         <a href="https://www.reddit.com/r/theredpill/">/r/theredpill</a>
       </div>
@@ -59,6 +62,14 @@
     </div>
     <a href="https://mail.protonmail.com/inbox">Protonmail</a>
   </div>
-  <!-- <script src="script.js" charset="utf-8"></script> -->
+
+  <div class="twitch">
+    <a href="https://www.twitch.tv/"><i class="fa fa-twitch"></i></a>&nbsp;&nbsp;
+    <div id="twitch-streams" class="twitch-streams">
+    </div>
+  </div>
+
+  <script src="keys.json"></script>
+  <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
