Add static LCK standings table

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
       </div>
     </div>
     <a href="https://thepiratebay.org/">The Pirate Bay</a>
-    <a href="https://github.com/">GitHub</a>
+    <div class="dropdown">
+      <a href="https://github.com/">GitHub</a>
+      <div class="dropdown-content">
+        <a href="https://github.com/Jillboy/dotfiles">dotfiles</a>
+        <a href="https://github.com/Jillboy/home">home</a>
+        <a href="https://github.com/Jillboy/spoilerfree">spoilerfree</a>
+      </div>
+    </div>
     <div class="dropdown">
       <a href="https://wiki.installgentoo.com/index.php?title=Main_Page">InstallGentoo</a>
       <div class="dropdown-content">
@@ -62,6 +69,80 @@
     </div>
     <a href="https://mail.protonmail.com/inbox">Protonmail</a>
   </div>
+
+  <table>
+    <caption>LCK Standings</caption>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Teams</th>
+        <th>W</th>
+        <th>L</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>1</th>
+        <td><img src="static/icons/LCK/samsung-galaxy_16x16.png"> Samsung Galaxy</td>
+        <td>6</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <th>1</th>
+        <td><img src="static/icons/LCK/skt-telecom-t1_16x16.png"> SK Telecom T1</td>
+        <td>6</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td><img src="static/icons/LCK/longzhu-gaming_16x16.png"> Longzhu Gaming</td>
+        <td>5</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td><img src="static/icons/LCK/kt-rolster_16x16.png"> KT Rolster</td>
+        <td>5</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <th>5</th>
+        <td><img src="static/icons/LCK/jin-air-green-wings_16x16.png"> Jin Air Green Wings</td>
+        <td>4</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <th>5</th>
+        <td><img src="static/icons/LCK/afreeca-freecs_16x16.png"> Afreeca Freecs</td>
+        <td>4</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td><img src="static/icons/LCK/rox-tigers_16x16.png"> ROX Tigers</td>
+        <td>1</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td><img src="static/icons/LCK/bbq-olivers_16x16.png"> bbq OLIVERS</td>
+        <td>1</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td><img src="static/icons/LCK/mvp_16x16.png"> MVP</td>
+        <td>1</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <th>7</th>
+        <td><img src="static/icons/LCK/ever8-winners_16x16.png"> Ever8 Winners</td>
+        <td>1</td>
+        <td>6</td>
+      </tr>
+    </tbody>
+  </table>
 
   <div class="twitch">
     <a href="https://www.twitch.tv/"><i class="fa fa-twitch"></i></a>&nbsp;&nbsp;
