Made some small adjustments

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="dropdown">
       <a href="https://www.youtube.com/">YouTube</a>
       <div class="dropdown-content">
+        <a href="https://www.youtube.com/channel/UCtMM6QD3n-jCjUfvflarboA/videos">BestLeagueTW</a>
         <a href="https://www.youtube.com/user/lastshadow9">LS</a>
       </div>
     </div>
@@ -70,8 +71,10 @@
     <a href="https://mail.protonmail.com/inbox">Protonmail</a>
   </div>
 
-  <table>
-    <caption>LCK Standings</caption>
+  <table class="standings">
+    <caption>
+      <a href="http://www.lolesports.com/en_US/lck/lck_2017_summer/standings/regular_season">LCK Standings</a>
+    </caption>
     <thead>
       <tr>
         <th></th>
@@ -84,62 +87,62 @@
       <tr>
         <th>1</th>
         <td><img src="static/icons/LCK/samsung-galaxy_16x16.png"> Samsung Galaxy</td>
-        <td>6</td>
+        <td>7</td>
         <td>1</td>
       </tr>
       <tr>
         <th>1</th>
         <td><img src="static/icons/LCK/skt-telecom-t1_16x16.png"> SK Telecom T1</td>
-        <td>6</td>
+        <td>7</td>
         <td>1</td>
       </tr>
       <tr>
-        <th>3</th>
-        <td><img src="static/icons/LCK/longzhu-gaming_16x16.png"> Longzhu Gaming</td>
-        <td>5</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <th>3</th>
+        <th>1</th>
         <td><img src="static/icons/LCK/kt-rolster_16x16.png"> KT Rolster</td>
-        <td>5</td>
+        <td>7</td>
         <td>1</td>
+      </tr>
+      <tr>
+        <th>4</th>
+        <td><img src="static/icons/LCK/longzhu-gaming_16x16.png"> Longzhu Gaming</td>
+        <td>6</td>
+        <td>2</td>
       </tr>
       <tr>
         <th>5</th>
         <td><img src="static/icons/LCK/jin-air-green-wings_16x16.png"> Jin Air Green Wings</td>
         <td>4</td>
-        <td>3</td>
+        <td>4</td>
       </tr>
       <tr>
         <th>5</th>
         <td><img src="static/icons/LCK/afreeca-freecs_16x16.png"> Afreeca Freecs</td>
         <td>4</td>
-        <td>3</td>
+        <td>4</td>
       </tr>
       <tr>
         <th>7</th>
         <td><img src="static/icons/LCK/rox-tigers_16x16.png"> ROX Tigers</td>
-        <td>1</td>
-        <td>5</td>
+        <td>2</td>
+        <td>6</td>
       </tr>
       <tr>
-        <th>7</th>
+        <th>8</th>
         <td><img src="static/icons/LCK/bbq-olivers_16x16.png"> bbq OLIVERS</td>
         <td>1</td>
-        <td>6</td>
+        <td>7</td>
       </tr>
       <tr>
-        <th>7</th>
+        <th>8</th>
         <td><img src="static/icons/LCK/mvp_16x16.png"> MVP</td>
         <td>1</td>
-        <td>6</td>
+        <td>7</td>
       </tr>
       <tr>
-        <th>7</th>
+        <th>8</th>
         <td><img src="static/icons/LCK/ever8-winners_16x16.png"> Ever8 Winners</td>
         <td>1</td>
-        <td>6</td>
+        <td>7</td>
       </tr>
     </tbody>
   </table>
@@ -151,6 +154,6 @@
   </div>
 
   <script src="keys.json"></script>
-  <script src="script.js" charset="utf-8"></script>
+  <script src="script.js"></script>
 </body>
 </html>
